--- a/ejercicio18.html
+++ b/ejercicio18.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <style>
@@ -15,8 +14,8 @@
         }
     </style>
 </head>
-
 <body>
     <div>
         <h1>Centrar texto</h1>
-    </div </body>
+    </div>
+</body>
