--- a/ejercicio19.html
+++ b/ejercicio19.html
@@ -15,14 +15,13 @@
             left: 50%;
             top: 50%;
             transform: translate(-50%, -50%);
-            -webkit-transform: translate(-50%, - 50%);
+            -webkit-transform: translate(-50%, -50%);
         }
     </style>
 </head>
 
 <body>
     <div>
-        <img src="https://cdn.pixabay.com/photo/2019/11/02
-/21/45/maple-leaf-4597501_960_720.jpg" width="500px" height=”100px”>
+        <img src="https://cdn.pixabay.com/photo/2019/11/02/21/45/maple-leaf-4597501_960_720.jpg" width="500px" height="100px">
     </div>
 </body>
