--- a/ejercicio20.html
+++ b/ejercicio20.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <style>
@@ -21,10 +20,8 @@
         }
     </style>
 </head>
-
 <body>
     <div class="container">
-        <div class="centered-element">Contenido
-            centrado</div>
+        <div class="centered-element">Contenido centrado</div>
     </div>
 </body>
