--- a/ejercicio21.html
+++ b/ejercicio21.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <style>
@@ -17,11 +16,9 @@
         }
     </style>
 </head>
-
 <body>
     <div class="container">
-        <div class="centered-element">Elemento
-            centrado</div>
+        <div class="centered-element">Elemento centrado</div>
     </div>
     </div>
 </body>
