--- a/ejercicio3.html
+++ b/ejercicio3.html
@@ -1,6 +1,5 @@
 <html>
 <!-- Diseño Liquido -->
-
 <head>
     <meta charset="utf-8">
     <style>
@@ -13,8 +12,7 @@
             text-align: center;
         }
 
-        aside,
-        section {
+        aside, section {
             float: left;
             padding: 0;
             margin: 0;
@@ -29,7 +27,6 @@
         }
     </style>
 </head>
-
 <body>
     <h1>Diseño web mediante CSS y HTML</h1>
     <aside>
@@ -79,5 +76,4 @@
             mínimos y máximos. </p>
     </section>
 </body>
-
 </html>
