--- a/ejercicio4.html
+++ b/ejercicio4.html
@@ -1,6 +1,5 @@
 <html>
 <!-- Diseño Responsive -->
-
 <head>
     <meta charset="utf-8">
     <style>
@@ -14,8 +13,7 @@
                 text-align: center;
             }
 
-            aside,
-            section {
+            aside, section {
                 float: left;
                 padding: 0;
                 margin: 0;
@@ -35,8 +33,7 @@
                 text-align: center;
             }
 
-            aside,
-            section {
+            aside, section {
                 float: left;
                 padding: 0;
                 margin: 0;
@@ -66,7 +63,6 @@
         }
     </style>
 </head>
-
 <body>
     <h1>Diseño web mediante CSS y HTML</h1>
     <aside>
@@ -116,5 +112,4 @@
             mínimos y máximos. </p>
     </section>
 </body>
-
 </html>
