--- a/ejercicio13.html
+++ b/ejercicio13.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html>
-
 <head>
     <script src="https://kit.fontawesome.com/509deda241.js" crossorigin="anonymous"></script>
     <style>
@@ -16,9 +15,7 @@
             line-height: 1.5em;
         }
 
-        .fa-star,
-        .fa-thumbs-up,
-        .fa-check {
+        .fa-star, .fa-thumbs-up, .fa-check {
             font-size: 2.7em;
             display: block;
             color: black;
@@ -51,20 +48,19 @@
         }
     </style>
 </head>
-
 <body>
     <div class="info-box">
         <h2>This is an info-box</h2>
         <div id="flex-p">
-            <p class="big"><i class="fas fastar"></i><br>Lorem ipsum dolor sit amet
+            <p class="big"><i class="fas fa-star"></i><br>Lorem ipsum dolor sit amet
                 consectetur adipisicing elit. Adipisci
                 incidunt, laudantium nostrum minus fuga aut
                 dolore fugit cupiditate qui.</p>
-            <p class="big"><i class="fas fa-thumbsup"></i><br>Vivamus sagittis lacus vel augue
+            <p class="big"><i class="fas fa-thumbs-up"></i><br>Vivamus sagittis lacus vel augue
                 laoreet rutrum faucibus dolor auctor. Integer
                 posuere erat a ante venenatis dapibus posuere
                 velit aliquet.</p>
-            <p class="big"><i class="fas facheck"></i><br>Donec sed odio dui. Cras
+            <p class="big"><i class="fas fa-check"></i><br>Donec sed odio dui. Cras
                 mattis consectetur purus sit amet fermentum.
                 Nullam id dolor id nibh ultricies vehicula ut
                 id elit.</p>
