--- a/ejercicio22.html
+++ b/ejercicio22.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <style>
@@ -9,8 +8,6 @@
         }
     </style>
 </head>
-
 <body>
-    <img src="https://cdn.pixabay.com/photo/2019/11/02
-/21/45/maple-leaf-4597501_960_720.jpg" width="500px"> Alinear texto
+    <img src="https://cdn.pixabay.com/photo/2019/11/02/21/45/maple-leaf-4597501_960_720.jpg" width="500px"> Alinear texto
 </body>
