--- a/ejercicio8.html
+++ b/ejercicio8.html
@@ -1,5 +1,4 @@
 <html>
-
 <head>
     <meta charset="utf-8">
     <style>
@@ -8,8 +7,7 @@
             color: black;
         }
 
-        /* En pantallas menores a 992px, el
-color de fondo es azul*/
+        /* En pantallas menores a 992px, el color de fondo es azul*/
         @media screen and (max-width: 992px) {
             body {
                 background-color: blue;
@@ -17,8 +15,7 @@ color de fondo es azul*/
             }
         }
 
-        /* En pantallas inferiores a 600px, el
-color de fondo es verde oliva */
+        /* En pantallas inferiores a 600px, el color de fondo es verde oliva */
         @media screen and (max-width: 600px) {
             body {
                 background-color: olive;
@@ -27,7 +24,6 @@ color de fondo es verde oliva */
         }
     </style>
 </head>
-
 <body>
     <h1>Si cambia la medida de la pantalla, se
         verá como cambia el color</h1>
@@ -38,5 +34,4 @@ color de fondo es verde oliva */
         Si es 600px o menos, canbiará a color verde
         oliva.</p>
 </body>
-
 </html>
