--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
         <li><a href="ejercicio7.html">Ejercicio 7</a></li>
         <li><a href="ejercicio8.html">Ejercicio 8</a></li>
         <li><a href="ejercicio9.html">Ejercicio 9</a></li>
+        <li><a href="ejercicio10.html">Ejercicio 10</a></li>
+        <li><a href="ejercicio11.html">Ejercicio 11</a></li>
+        <li><a href="ejercicio12.html">Ejercicio 12</a></li>
+        <li><a href="ejercicio13.html">Ejercicio 13</a></li>
+        <li><a href="ejercicio14.html">Ejercicio 14</a></li>
+        <li><a href="ejercicio15.html">Ejercicio 15</a></li>
+        <li><a href="ejercicio16.html">Ejercicio 16</a></li>
+        <li><a href="ejercicio17.html">Ejercicio 17</a></li>
+        <li><a href="ejercicio18.html">Ejercicio 18</a></li>
+        <li><a href="ejercicio19.html">Ejercicio 19</a></li>
+        <li><a href="ejercicio20.html">Ejercicio 20</a></li>
+        <li><a href="ejercicio21.html">Ejercicio 21</a></li>
+        <li><a href="ejercicio22.html">Ejercicio 22</a></li>
+        <li><a href="ejercicio23.html">Ejercicio 23</a></li>
+        <li><a href="ejercicio24.html">Ejercicio 24</a></li>
+        <li><a href="ejercicio25.html">Ejercicio 25</a></li>
     </ul>
 </body>
 </html>
